--- a/src/components/BlackHoleComponent/BlackHole.css
+++ b/src/components/BlackHoleComponent/BlackHole.css
@@ -1,5 +1,5 @@
 .circleBox {
-  margin-top: 200px;
+  margin-top: 240px;
   --deg: 1;
   --x: -50%;
   --y: -50%;
@@ -95,4 +95,13 @@
     filter: hue-rotate(360deg);
     transform: translate(var(--x), var(--y)) rotate(360deg);
   }
+}
+
+.bg-transition {
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.hide {
+  opacity: 0;
+  transform: scale(0.9);
 }
